--- a/quox-backend/Dockerfile
+++ b/quox-backend/Dockerfile
@@ -1,14 +1,13 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 5001
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["quox-backend/quox-backend.csproj", "quox-backend/"]
-RUN dotnet restore "quox-backend/quox-backend.csproj"
+COPY ["quox-backend.csproj", "./"]
+RUN dotnet restore "quox-backend.csproj"
 COPY . .
-WORKDIR "/src/quox-backend"
+WORKDIR "/src/"
 RUN dotnet build "quox-backend.csproj" -c Release -o /app/build
 
 FROM build AS publish
